# student-essay-tracker

./: .env.example  .gitignore  BUILD_AND_FIXES.txt  PHASE2_REVIEW_REPORT.txt  PHASE3_REVIEW_REPORT.txt  PHASE4_REPORT.txt  PHASE5_REPORT.txt  PHASE6_REPORT.txt  PHASE7_REPORT.txt  README.md  db.js  package-lock.json  package.json  schema.sql  schema.sqlite.sql  seed.sql  server.js  vercel.json
.github/workflows/: desktop-release.yml
api/: index.js
db/: migration_007_comparison_reports.sql  migration_008_iep_goals.sql  migration_009_assignment_source_documents.sql  migration_010_writing_goal.sql
desktop/: README.md
desktop/src-tauri/: Cargo.toml  demo-seed.sql  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: db.rs  error.rs  main.rs  server.rs  settings.rs
desktop/src-tauri/src/ai/: json.rs  mod.rs
desktop/src-tauri/src/routes/: analytics.rs  analyze_writing.rs  assignments.rs  compare_progress.rs  comparisons.rs  demo.rs  entries.rs  mod.rs  source_links.rs  students.rs  writing_tags.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
lib/: boolean.js  claudeJson.js  words.js
lib/ai/: anthropicProvider.js  provider.js  (+1 more)
middleware/: errorHandler.js  responses.js
prompts/: analyze-writing.system.txt  compare-progress.system.txt
routes/: analytics.js  analyzeWriting.js  assignments.js  compareProgress.js  comparisons.js  entries.js  sourceLinks.js  students.js  writingTags.js
scripts/: apply-migrations.js  ensure-db.js  phase6-parse-selftest.js  phase7-selftest.js
(+45 files in other folders)
